[package]
name = "ds2img"
version = "0.1.0"
edition = "2021"
description = "Convert a directory structure to a disk image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
fatfs = "0.3.6"
fscommon = "0.1.1"
gpt = "3.1.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.1"
walkdir = "2.4.0"
